--- a/Coinvert/Coinvert/Base.lproj/Main.storyboard
+++ b/Coinvert/Coinvert/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B23" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
@@ -194,15 +194,9 @@
                                 </state>
                                 <connections>
                                     <action selector="startButtonWasClicked:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Zsr-Ra-eWw"/>
-                                    <segue destination="fDL-PL-ccS" kind="show" id="zkj-qv-qOE"/>
+                                    <segue destination="fDL-PL-ccS" kind="show" identifier="showSendScreen" id="zkj-qv-qOE"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="I want to coinvert:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j9v-qn-fzC">
-                                <rect key="frame" x="88" y="106" width="198" height="25"/>
-                                <fontDescription key="fontDescription" name="GillSans-Bold" family="Gill Sans" pointSize="21"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Into:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Ze-mW-bct">
                                 <rect key="frame" x="162" y="283" width="51" height="25"/>
                                 <fontDescription key="fontDescription" name="GillSans-Bold" family="Gill Sans" pointSize="21"/>
@@ -222,7 +216,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hXd-I2-CLR">
-                                <rect key="frame" x="16" y="100" width="100" height="100"/>
+                                <rect key="frame" x="47" y="137" width="50" height="50"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="372-9y-jYS">
                                 <rect key="frame" x="40" y="278" width="47" height="30"/>
@@ -246,7 +240,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9jh-wU-99t">
-                                <rect key="frame" x="40" y="479" width="87" height="30"/>
+                                <rect key="frame" x="29" y="432" width="87" height="30"/>
                                 <state key="normal" title="Change coin">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -260,9 +254,9 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your Payment Address" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UnG-cF-5x1">
-                                <rect key="frame" x="47" y="532" width="303" height="30"/>
+                                <rect key="frame" x="56" y="512" width="303" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="(optional)" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gNm-WD-SCv">
                                 <rect key="frame" x="253" y="447" width="97" height="30"/>
@@ -288,8 +282,21 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RH1-ds-euX">
-                                <rect key="frame" x="40" y="335" width="100" height="100"/>
+                                <rect key="frame" x="53" y="374" width="50" height="50"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="I want to coinvert:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j9v-qn-fzC">
+                                <rect key="frame" x="88" y="98" width="198" height="25"/>
+                                <fontDescription key="fontDescription" name="GillSans-Bold" family="Gill Sans" pointSize="21"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zap-nz-ETb">
+                                <rect key="frame" x="23" y="517" width="25" height="25"/>
+                                <state key="normal" title="Button" image="QR.png"/>
+                                <connections>
+                                    <action selector="qrCameraWasClicked:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="KjL-y4-bDy"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -299,19 +306,21 @@
                         <outlet property="depositLimitLabel" destination="yFd-En-WZ4" id="Lfh-dR-t5y"/>
                         <outlet property="fromCoinImage" destination="hXd-I2-CLR" id="9B1-if-pyR"/>
                         <outlet property="fromCoinLabel" destination="mgr-9R-h2x" id="G5b-0d-EhR"/>
+                        <outlet property="returnCoinAddress" destination="ZaO-kM-OvY" id="Rn6-ZE-GIM"/>
                         <outlet property="timerBar" destination="GF7-fP-1cV" id="AhJ-yc-3u6"/>
                         <outlet property="toCoinImage" destination="RH1-ds-euX" id="3Ma-Ac-une"/>
                         <outlet property="toCoinLabel" destination="RCf-gZ-5BF" id="45F-U9-odN"/>
+                        <outlet property="yourPaymentAddress" destination="UnG-cF-5x1" id="m16-PX-w3J"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="383.5" y="432.5"/>
         </scene>
-        <!--View Controller-->
+        <!--Send View Controller-->
         <scene sceneID="7Ex-fp-hCC">
             <objects>
-                <viewController id="fDL-PL-ccS" sceneMemberID="viewController">
+                <viewController id="fDL-PL-ccS" customClass="SendViewController" customModule="Coinvert" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="o5Z-jL-WOm"/>
                         <viewControllerLayoutGuide type="bottom" id="G84-FK-G0U"/>
@@ -319,9 +328,52 @@
                     <view key="view" contentMode="scaleToFill" id="uVI-jC-c7u">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cjv-YR-GEw">
+                                <rect key="frame" x="44" y="115" width="50" height="50"/>
+                                <state key="normal" title="Button" image="QR.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="qrGenerate:" destination="fDL-PL-ccS" eventType="touchUpInside" id="ILC-Pa-fvE"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wfv-r5-j9O">
+                                <rect key="frame" x="102" y="119" width="237" height="42"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Deposit Address" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g2Y-tq-5aI">
+                                <rect key="frame" x="116" y="75" width="127" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Withdrawl Address" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oST-4V-zIz">
+                                <rect key="frame" x="107" y="521" width="145" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Vo-Af-J3W">
+                                <rect key="frame" x="44" y="563" width="273" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KSW-cL-wdt">
+                                <rect key="frame" x="73" y="209" width="250" height="250"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="depositAddressLabel" destination="wfv-r5-j9O" id="RNL-3c-lnp"/>
+                        <outlet property="qrCodeImageView" destination="KSW-cL-wdt" id="eSg-d5-CVm"/>
+                        <outlet property="withdrawalAddressLabel" destination="6Vo-Af-J3W" id="O3J-Y5-o10"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z4e-H5-xkU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -488,6 +540,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="QR.png" width="128" height="128"/>
         <image name="bitcoin.png" width="100" height="100"/>
         <image name="blackcoin.png" width="100" height="100"/>
         <image name="darkcoin.png" width="100" height="100"/>
